exports[`no-static-only-class > invalid(1): class A { static a() {}; } 1`] = `

  1 | class A { static a() {}; }

`;

exports[`no-static-only-class > invalid(1): class A { static a() {}; } 2`] = `

Message:
> 1 | class A { static a() {}; }
    | ^^^^^^^ Use an object instead of a class with only static members.

Output:
  1 | const A = { a() {}, };

`;

exports[`no-static-only-class > invalid(10): export default class { static a() {}; } 1`] = `

  1 | export default class { static a() {}; }

`;

exports[`no-static-only-class > invalid(10): export default class { static a() {}; } 2`] = `

Message:
> 1 | export default class { static a() {}; }
    |                ^^^^^ Use an object instead of a class with only static members.

Output:
  1 | export default { a() {}, }

`;

exports[`no-static-only-class > invalid(11): export class A { static a() {}; } 1`] = `

  1 | export class A { static a() {}; }

`;

exports[`no-static-only-class > invalid(11): export class A { static a() {}; } 2`] = `

Message:
> 1 | export class A { static a() {}; }
    |        ^^^^^^^ Use an object instead of a class with only static members.

Output:
  1 | export const A = { a() {}, };

`;

exports[`no-static-only-class > invalid(12): function a() {\n\treturn class\n\t{\n\t\tstatic a() {}\n\t}\n} 1`] = `

  1 | function a() {
  2 | 	return class
  3 | 	{
  4 | 		static a() {}
  5 | 	}
  6 | }

`;

exports[`no-static-only-class > invalid(12): function a() {\n\treturn class\n\t{\n\t\tstatic a() {}\n\t}\n} 2`] = `

Message:
  1 | function a() {
> 2 | 	return class
    | 	       ^^^^^ Use an object instead of a class with only static members.
  3 | 	{
  4 | 		static a() {}
  5 | 	}
  6 | }

Output:
  1 | function a() {
  2 | 	return {
  3 | 		a() {},
  4 | 	}
  5 | }

`;

exports[`no-static-only-class > invalid(13): function a() {\n\treturn class /* comment */\n\t{\n\t\tstatic a() {}\n\t}\n} 1`] = `

  1 | function a() {
  2 | 	return class /* comment */
  3 | 	{
  4 | 		static a() {}
  5 | 	}
  6 | }

`;

exports[`no-static-only-class > invalid(13): function a() {\n\treturn class /* comment */\n\t{\n\t\tstatic a() {}\n\t}\n} 2`] = `

Message:
  1 | function a() {
> 2 | 	return class /* comment */
    | 	       ^^^^^ Use an object instead of a class with only static members.
  3 | 	{
  4 | 		static a() {}
  5 | 	}
  6 | }

Output:
  1 | function a() {
  2 | 	return { /* comment */
  3 | 	
  4 | 		a() {},
  5 | 	}
  6 | }

`;

exports[`no-static-only-class > invalid(14): function a() {\n\treturn class // comment\n\t{\n\t\tstatic a() {}\n\t}\n} 1`] = `

  1 | function a() {
  2 | 	return class // comment
  3 | 	{
  4 | 		static a() {}
  5 | 	}
  6 | }

`;

exports[`no-static-only-class > invalid(14): function a() {\n\treturn class // comment\n\t{\n\t\tstatic a() {}\n\t}\n} 2`] = `

Message:
  1 | function a() {
> 2 | 	return class // comment
    | 	       ^^^^^ Use an object instead of a class with only static members.
  3 | 	{
  4 | 		static a() {}
  5 | 	}
  6 | }

Output:
  1 | function a() {
  2 | 	return { // comment
  3 | 	
  4 | 		a() {},
  5 | 	}
  6 | }

`;

exports[`no-static-only-class > invalid(15): class A {static a(){}}\nclass B extends A {} 1`] = `

  1 | class A {static a(){}}
  2 | class B extends A {}

`;

exports[`no-static-only-class > invalid(15): class A {static a(){}}\nclass B extends A {} 2`] = `

Message:
> 1 | class A {static a(){}}
    | ^^^^^^^ Use an object instead of a class with only static members.
  2 | class B extends A {}

Output:
  1 | const A = {a(){},};
  2 | class B extends A {}

`;

exports[`no-static-only-class > invalid(16): class A {static a(){}}\nconsole.log(typeof A) 1`] = `

  1 | class A {static a(){}}
  2 | console.log(typeof A)

`;

exports[`no-static-only-class > invalid(16): class A {static a(){}}\nconsole.log(typeof A) 2`] = `

Message:
> 1 | class A {static a(){}}
    | ^^^^^^^ Use an object instead of a class with only static members.
  2 | console.log(typeof A)

Output:
  1 | const A = {a(){},};
  2 | console.log(typeof A)

`;

exports[`no-static-only-class > invalid(17): class A {static a(){}}\nconst a = new A; 1`] = `

  1 | class A {static a(){}}
  2 | const a = new A;

`;

exports[`no-static-only-class > invalid(17): class A {static a(){}}\nconst a = new A; 2`] = `

Message:
> 1 | class A {static a(){}}
    | ^^^^^^^ Use an object instead of a class with only static members.
  2 | const a = new A;

Output:
  1 | const A = {a(){},};
  2 | const a = new A;

`;

exports[`no-static-only-class > invalid(2): class A { static a() {} } 1`] = `

  1 | class A { static a() {} }

`;

exports[`no-static-only-class > invalid(2): class A { static a() {} } 2`] = `

Message:
> 1 | class A { static a() {} }
    | ^^^^^^^ Use an object instead of a class with only static members.

Output:
  1 | const A = { a() {}, };

`;

exports[`no-static-only-class > invalid(3): class A { static get a() { return 1; } } 1`] = `

  1 | class A { static get a() { return 1; } }

`;

exports[`no-static-only-class > invalid(3): class A { static get a() { return 1; } } 2`] = `

Message:
> 1 | class A { static get a() { return 1; } }
    | ^^^^^^^ Use an object instead of a class with only static members.

Output:
  1 | const A = { get a() { return 1; }, };

`;

exports[`no-static-only-class > invalid(4): class A { static set a(v) {} } 1`] = `

  1 | class A { static set a(v) {} }

`;

exports[`no-static-only-class > invalid(4): class A { static set a(v) {} } 2`] = `

Message:
> 1 | class A { static set a(v) {} }
    | ^^^^^^^ Use an object instead of a class with only static members.

Output:
  1 | const A = { set a(v) {}, };

`;

exports[`no-static-only-class > invalid(5): class A { static get a() { return 1; } static set a(v) {} } 1`] = `

  1 | class A { static get a() { return 1; } static set a(v) {} }

`;

exports[`no-static-only-class > invalid(5): class A { static get a() { return 1; } static set a(v) {} } 2`] = `

Message:
> 1 | class A { static get a() { return 1; } static set a(v) {} }
    | ^^^^^^^ Use an object instead of a class with only static members.

Output:
  1 | const A = { get a() { return 1; }, set a(v) {}, };

`;

exports[`no-static-only-class > invalid(6): const A = class A { static a() {}; } 1`] = `

  1 | const A = class A { static a() {}; }

`;

exports[`no-static-only-class > invalid(6): const A = class A { static a() {}; } 2`] = `

Message:
> 1 | const A = class A { static a() {}; }
    |           ^^^^^^^ Use an object instead of a class with only static members.

`;

exports[`no-static-only-class > invalid(7): const A = class { static a() {}; } 1`] = `

  1 | const A = class { static a() {}; }

`;

exports[`no-static-only-class > invalid(7): const A = class { static a() {}; } 2`] = `

Message:
> 1 | const A = class { static a() {}; }
    |           ^^^^^ Use an object instead of a class with only static members.

Output:
  1 | const A = { a() {}, }

`;

exports[`no-static-only-class > invalid(8): class A { static constructor() {}; } 1`] = `

  1 | class A { static constructor() {}; }

`;

exports[`no-static-only-class > invalid(8): class A { static constructor() {}; } 2`] = `

Message:
> 1 | class A { static constructor() {}; }
    | ^^^^^^^ Use an object instead of a class with only static members.

Output:
  1 | const A = { constructor() {}, };

`;

exports[`no-static-only-class > invalid(9): export default class A { static a() {}; } 1`] = `

  1 | export default class A { static a() {}; }

`;

exports[`no-static-only-class > invalid(9): export default class A { static a() {}; } 2`] = `

Message:
> 1 | export default class A { static a() {}; }
    |                ^^^^^^^ Use an object instead of a class with only static members.

`;
